--- a/wp-content/themes/basic-theme/css/fonts.css
+++ b/wp-content/themes/basic-theme/css/fonts.css
@@ -99,3 +99,14 @@
     url(../fonts/CormorantGaramond-Medium.woff2) format("woff2");
     font-display: swap;
 }
+
+
+@font-face {
+    font-family: "Cakra";
+    font-weight:400;
+    src: local("Cakra"), 
+    url(../fonts/Cakra.ttf) format("truetype"), 
+    url(../fonts/Cakra.woff) format("woff"), 
+    url(../fonts/Cakra.woff2) format("woff2");
+    font-display: swap;
+}
