--- a/wp-content/themes/basic-theme/css/style.css
+++ b/wp-content/themes/basic-theme/css/style.css
@@ -2728,6 +2728,8 @@ transition: all .3s ease-in-out;
 .swiper-slide.swiper-slide-next {
     position: relative;
     transform: scale(1.2);
+    filter: drop-shadow(0px 0px 10px rgba(0, 0, 0, .4));
+    border: 7px solid #fff;
     z-index: 5;
     transition: all .3s ease-in-out;
 }
