--- a/wp-content/themes/basic-theme/css/header-style.css
+++ b/wp-content/themes/basic-theme/css/header-style.css
@@ -6,6 +6,7 @@ styles for header theme basic
     --black: #252525;
     --green: #01AF34;
     --light-green: #D6ECDC;
+    --dark-green: #476850;
     --yellow: #F7F300;
 }
 
