--- a/wp-content/themes/basic-theme/css/style.css
+++ b/wp-content/themes/basic-theme/css/style.css
@@ -62,10 +62,12 @@ a.button,
     display: block;
     background: transparent;
     text-align: center;
-    font-size: 20px;
+    font-size: 16px;
+    line-height: 1;
     text-transform: uppercase;
     font-family: 'Cakra';
-    padding: 7px 15px;
+    font-weight: 400;
+    padding: 10px 15px;
     color: var(--green);
     border-radius: 10px;
     width: 250px;
@@ -143,8 +145,10 @@ h2 {
 
 h3 {
     font-size: 24px;
+    font-weight: 400;
     font-family: 'Cakra';
     line-height: 100%;
+    letter-spacing: 3px;
     margin: 0;
     margin-bottom: 10px;
 }
@@ -1120,77 +1124,10 @@ p.popup-description {
     object-position: center;
 } */
 
-.entry-post__programm .entry-post__programm__link {
-    width: 400px;
-    height: 250px;
-    display: block;
-}
-
-.entry-post__programm {
-    position: relative;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    /* padding: 7px; */
-    border-radius: 5px;
-    border: 1px solid #cacaca;
-    margin-bottom: 30px;
-}
-
-.entry-post__programm__inner-img {
-    position: relative;
-    width: 100%;
-    height: 250px;
-}
-
 .programms-description {
     text-align: center;
 }
 
-.entry-post__programm .entry-post__programm__inner-img img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: center;
-}
-
-.entry-post__programm .entry-post__programm__inner-img:before {
-    content: '';
-    display: block;
-    position: absolute;
-    /* background: #000; */
-    background: linear-gradient(180deg, rgba(25, 25, 25, 0) 0%, rgba(25, 25, 25, 1));
-    width: 100%;
-    height: 100%;
-    top: 0;
-    z-index: 2;
-}
-
-
-.entry-post__programm__content {
-    width: 100%;
-    margin-top: 20px;
-    transition: all .3s linear;
-}
-
-/* 
-.entry-post__programm._open .entry-post__content {
-    display: block;
-} */
-.entry-post__programm__content._open {
-    display: block;
-    padding: 20px;
-    opacity: 1;
-    transform: translateY(0);
-    transition: all .3s linear;
-}
-
-.entry-post__programm__content {
-    display: none;
-    opacity: 0;
-    transform: translateY(-50%);
-    transition: all 2s linear;
-}
 
 .entry-post__inner__head {
     width: 70%;
@@ -1220,7 +1157,8 @@ p.popup-description {
     height: 70px;
 } */
 
-.entry-post__inner__head__summary .entry-post__programm__more, .archive__more-button {
+
+.archive__more-button {
     align-self: flex-end;
     display: flex;
     align-items: center;
@@ -1233,78 +1171,6 @@ p.popup-description {
     transition: all .5s linear;
 }
 
-a.entry-post__programm__more:hover {
-    background: var(--black);
-    border: 1px solid var(--black);
-    color: #fff;
-    transition: all .5s linear;
-}
-
-a.entry-post__programm__more:hover span {
-    color: var(--green);
-    transition: all .5s linear;
-}
-
-a.entry-post__programm__more svg path {
-    fill: #fff;
-    transition: all .5s linear;
-}
-
-
-a.entry-post__programm__more:hover svg path {
-    fill: var(--green);
-    transition: all .5s linear;
-}
-
-
-.entry-post__inner__head a.entry-post__programm__more {
-    height: auto;
-    margin-top: 20px;
-    color: var(--green);
-    /* text-decoration: underline; */
-    display: block;
-    border: none;
-}
-
-.entry-post__inner__head a.entry-post__programm__more {
-    position: relative;
-    padding: 3px;
-    border-radius: 3px;
-    display: block;
-    width: 150px;
-    color: #fff;
-    text-align: center;
-    background: var(--green);
-}
-
-.entry-post__inner__head a.entry-post__programm__more:hover {
-    background: var(--green);
-    color: #fff;
-    transition: all .3s linear;
-}
-
-.entry-post__inner__head a.entry-post__programm__more:after {
-    content: '';
-    display: block;
-    position: absolute;
-    width: 100%;
-    height: 1px;
-    background: var(--green);
-    left: 0;
-    bottom: 0;
-}
-
-.entry-post__inner__head a.entry-post__programm__more {
-    height: auto;
-    margin-top: 20px;
-}
-
-/* .entry-post__inner h3 {
-    padding: 10px;
-    color: #fff;
-    background: #313131;
-    font-weight: 600;
-} */
 
 .entry-post__inner__content .entry-post__inner__thumb {
     position: absolute;
@@ -1362,27 +1228,90 @@ a.entry-post__programm__more:hover svg path {
 
 /*PROGRAMMS*/
 
-.fixed-container .section-programms {
-    padding: 3% 30px;
-    transform: translateY(-40px);
-    background: #fff;
-    /* backdrop-filter: drop-shadow(2px 4px 6px black); */
-    /* backdrop-filter: drop-shadow(4px 4px 10px blue); */
-    box-shadow: black;
-    /* text-shadow: 0 0 black; */
+.section-programms {
+    overflow:hidden;
+    position: relative;
+    width:100%;
+    padding: 7% 0;
+    background: var(--dark-green);
+    color: #fff;
     box-shadow: 0 0 10px rgba(0, 0, 0, .1);
 }
 
-/* .section-books .fixed-container {
-    padding: 3% 30px;
-}  */
+.section-programms:before{
+    content: '';
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    display: block;
+    position: absolute;
+    background: url(../images/palms.svg) no-repeat;
+    background-size: cover;
+    backdrop-filter: blur(530px);
+    opacity: .4;
+    background-position: center;
+}
 
+.section-programms h2{
+    color: #fff;
+    text-align: center;
+}
+
+.section-programms .fixed-container{
+    padding-right: 15%;
+    padding-left: 15%;
+}
+
+ul.programms__list {
+    margin-top: 70px;
+}
+
+li.programms__list__item {
+    position: relative;
+    display: grid;
+    align-items: center;
+    justify-content: space-between;
+    grid-template-columns: 3fr 1fr;
+    column-gap: 50px;
+    padding: 40px 0;
+}
+
+li.programms__list__item:after {
+    content: '';
+    width: 100%;
+    height: 1px;
+    background: #fff;
+    position: absolute;
+    bottom: 0;
+}
+
+ul.programms__list li:first-child:before{
+    content: '';
+    width: 100%;
+    height: 1px;
+    background: #fff;
+    position: absolute;
+    top: 0;
+}
+
+a.programms__more-button.button {
+    border-color: #fff;
+    color: #fff;
+    width: 100%;
+}
+
+a.programms__more-button.button:hover{
+    background: #fff;
+    border-color: #fff;
+    color: var(--dark-green);
+    transition: all .3s ease-in-out;
+}
+/*BOOKS*/
 
 .archive-posts__grid.books {
     display: block;
 }
-
-/*BOOKS*/
 
 .section-books .fixed-container {
     position:relative;
@@ -2492,8 +2421,7 @@ ul.breadcrumbs__list {
         font-size: 18px !important;
     }
 
-    .archive-posts__grid a,
-    .entry-post__programm {
+    .archive-posts__grid a{
         overflow: hidden;
         height: auto;
         width: 100%;
@@ -2501,8 +2429,7 @@ ul.breadcrumbs__list {
         border: 1px solid #cacaca;
     }
 
-    .archive-posts__grid a img,
-    .entry-post__programm img {
+    .archive-posts__grid a img {
         width: 100%;
         height: 300px;
         object-fit: cover;
