--- a/wp-content/themes/basic-theme/css/style.css
+++ b/wp-content/themes/basic-theme/css/style.css
@@ -297,6 +297,22 @@ main.main {
     fill: rgba(1, 175, 52, 1);
 }
 
+.destr-img div img {
+    filter: saturate(0);
+    -webkit-filter: saturate(0);
+    -moz-backdrop-filter: saturate(0);
+    -ms-backdrop-filter: saturate(0);
+    transition: filter .5s ease-in;
+}
+
+.destr-img.element-show div img {
+    filter: saturate(1);
+    -webkit-filter: saturate(1);
+    -moz-backdrop-filter: saturate(1);
+    -ms-backdrop-filter: saturate(1);
+    transition: filter .5s ease-out;
+}
+
 /* .page-container .fixed-container {
     display: flex;
     justify-content: space-between;
