--- a/wp-content/themes/basic-theme/css/style.css
+++ b/wp-content/themes/basic-theme/css/style.css
@@ -448,6 +448,32 @@ img.hero-image {
     object-position: center;
 }
 
+a.hero-button{
+position: relative;
+display: block;
+    background: rgba(1, 175, 52, .3);
+    text-align: center;
+    font-size: 16px;
+    backdrop-filter: blur(20px);
+    line-height: 1;
+    text-transform: uppercase;
+    font-family: 'Cakra';
+    font-weight: 400;
+    padding: 15px 20px;
+    color: #fff;
+    border: 1px solid rgba(1, 175, 52, .3);
+    width: 300px;
+    transition: all .3s linear;
+}
+
+a.hero-button:hover{
+    background: transparent;
+    color: #fff;
+    border-color: #fff;
+    transition: all .3s linear;
+}
+
+
 .section-hero__content__title h1 {
     font-size: 95px;
     color: #fff;
@@ -1320,9 +1346,9 @@ a.programms__more-button.button {
 }
 
 a.programms__more-button.button:hover{
-    background: #fff;
-    border-color: #fff;
-    color: var(--dark-green);
+    background:var(--black);
+    border-color:var(--black);
+    color: #fff;
     transition: all .3s ease-in-out;
 }
 /*BOOKS*/
