--- a/wp-content/themes/basic-theme/css/style.css
+++ b/wp-content/themes/basic-theme/css/style.css
@@ -1444,17 +1444,8 @@ a.programms__more-button.button:hover{
 }
 
 .entry-post__books__item .button {
-    border: none;
-    color: #fff;
-    cursor: pointer;
-    margin:10px auto 0;
-    padding: 0;
-    width:250px;
-    padding-bottom: 2px;
-    font-size: 20px;
-    font-weight: 400;
-    letter-spacing: 5px;
-    transition: all .3s ease-in-out;
+    margin: 0 auto;
+    width: 250px;
 }
 
 .entry-post__books__item .button:hover{
