--- a/wp-content/themes/basic-theme/css/style.css
+++ b/wp-content/themes/basic-theme/css/style.css
@@ -181,7 +181,7 @@ h2.site-page__title {
     position: relative;
     font-size: 26px;
     font-weight: 400;
-    color: var(--black);
+    /* color: var(--black); */
     line-height: 1;
     margin-bottom: 30px;
     letter-spacing: 3px;
