--- a/wp-content/themes/basic-theme/css/style.css
+++ b/wp-content/themes/basic-theme/css/style.css
@@ -1905,9 +1905,10 @@ ul.breadcrumbs__list {
 }
 
 .page-header__inner {
-    position:relative;
-    padding-top: 120px;
-    width:100%;
+    position: relative;
+    padding-top: 140px;
+    padding-bottom: 50px;
+    width: 100%;
     overflow: hidden;
 }
 
