--- a/wp-content/themes/basic-theme/css/header-style.css
+++ b/wp-content/themes/basic-theme/css/header-style.css
@@ -802,6 +802,10 @@ transition: all .5s ease-in-out;
         background: rgb(0 24 7 / 75%);
         position: fixed;
         backdrop-filter: blur(30px);
+        -webkit-backdrop-filter: blur(30px);
+        -moz-backdrop-filter: blur(30px);
+        -ms-backdrop-filter: blur(30px);
+        -o-backdrop-filter: blur(30px);
         padding: 100px 20px;
         transform: translateX(100%);
         width: 40%;
