--- a/wp-content/themes/basic-theme/css/header-style.css
+++ b/wp-content/themes/basic-theme/css/header-style.css
@@ -258,7 +258,7 @@ li.social__item .social__link img {
 }
 
 .header__top__left {
-    width:50%;
+    width:25%;
     transition: all .5s ease-in;
 }
 
@@ -775,6 +775,10 @@ transition: all .5s ease-in-out;
 }
 
 @media (max-width: 768px) {
+
+    .header__top__left {
+        width: 50%
+    }
     .header__top__right {
         display: none;
     }
