--- a/wp-content/themes/basic-theme/css/style.css
+++ b/wp-content/themes/basic-theme/css/style.css
@@ -2142,10 +2142,10 @@ body.programms-template-default.single.single-programms {
     section.page-section {
         padding-top: 70px;
     } */
-
+/* 
     .page-header__inner {
         padding-top: 90px;
-    }
+    } */
 
     .category-container {
         padding-top: 90px;
